--- a/movies/.env
+++ b/movies/.env
@@ -24,5 +24,5 @@ APP_SECRET=3e36a1384f8f820a788d3d13fed8803f
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:Blinker3344filou!@127.0.0.1:3306/movies?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
